--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bunyan": "^1.8.14",
     "cors": "^2.8.5",
     "crypto-random-string": "^3.2.0",
     "dotenv": "^8.2.0",
@@ -38,6 +39,8 @@
     "mongoose": "^5.9.16",
     "mongoose-schema-extend": "^0.2.2",
     "mongoose-slug-updater": "^3.2.1",
+    "multer": "^1.4.2",
+    "paystack-node": "^0.2.5",
     "validator": "^13.0.0"
   }
 }
