--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "bunyan": "^1.8.14",
     "cors": "^2.8.5",
     "crypto-random-string": "^3.2.0",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
@@ -43,5 +42,8 @@
     "paystack-node": "^0.2.5",
     "sharp": "^0.26.0",
     "validator": "^13.0.0"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
