--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "crypto-random-string": "^3.2.0",
     "express": "^4.17.1",
+    "heroku": "^7.42.13",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.16",
